--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,9 +8,11 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.11,<3.13"
 langchain = {extras = ["llm"], version = "^0.0.329"}
-fastapi = "^0.104.1"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
 pandas = "^2.1.2"
+flask = "^3.0.0"
+flask-cors = "^4.0.0"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
