--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "deep-chat": "^1.3.23",
     "vue": "^3.3.4"
   },
   "devDependencies": {
