--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "deep-chat": "^1.3.23",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "date-fns": "^2.23.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
