--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,8 @@ flask-cors = "^4.0.0"
 python-dotenv = "^1.0.0"
 openai = "^0.28.1"
 jinja2 = "^3.1.2"
+chromadb = "^0.4.15"
+tiktoken = "^0.5.1"
 
 
 [build-system]
