--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "deep-chat": "^1.3.23",
     "vue": "^3.3.4",
-    "date-fns": "^2.23.0"
+    "date-fns": "^2.23.0",
+    "axios": "^0.21.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
