--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "deep-chat": "^1.3.23",
     "vue": "^3.3.4",
     "date-fns": "^2.23.0",
-    "axios": "^0.21.4"
+    "axios": "^0.21.4",
+    "mitt": "^3.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
