--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,8 @@ jinja2 = "^3.1.2"
 pillow = "^10.1.0"
 chromadb = "^0.4.15"
 tiktoken = "^0.5.1"
+jupyter = "^1.0.0"
+pytest = "^7.4.3"
 
 
 [build-system]
